--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,29 @@
 [tool.poetry]
-name = "wpro_working"
-version = "0.1"
+name = "emurenewal"
+version = "0.1.0"
+description = "EMU Renewal Model"
+authors = ["David Shipman <dshipman@gmail.com>"]
+license = "BSD 2-Clause"
 readme = "README.md"
-license = "BSD-2-Clause"
-homepage = "https://github.com/monash-emu/wpro_working"
-repository = "https://github.com/monash-emu/wpro_working"
-documentation = "https://github.com/monash-emu/wpro_working"
-keywords = [
-    "covid19",
-    "summerepi"
-]
-description = "Works in progress towards execution of our 2023/24 contract with WPRO to support Malaysia, the Philippines and Vietnam"
-authors = [
-    "James Trauer <james.trauer@monash.edu>",
-    "David Shipman <david.shipman@monash.edu>",
-    "Angus Hughes <angus.hughes@monash.edu>",
-    "Romain Ragonnet <romain.ragonnet@monash.edu>",
-]
-packages = [
-    {include = "inputs"},
-]
 
 [tool.poetry.dependencies]
-python = ">=3.8.0, <4.0.0"
-estival = "==0.4.9"
-kaleido = "==0.2.1"
-pylatex = "==1.4.1"
-summerepi2 = ">=1.3.0"
-tables = "^3"
+python = "^3.10"
+estival = "^0.5.0"
+numpyro = "^0.13.2"
+pyarrow = "^15.0.0"
+
+jupyterlab = {version = "^4.1.0", optional = true}
+ipywidgets = {version = "^8.1.2", optional = true}
+pandas = "2.1.4"
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.2.1"
+estival = { path = "../estival/", develop = true }
+summerepi2 = { path = "../summer2/", develop = true }
+
+[tool.poetry.extras]
+jupyter = ["jupyterlab", "ipywidgets"]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.black]
-line-length = 100
