--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,18 @@ authors = [
     "Romain Ragonnet <romain.ragonnet@monash.edu>",
 ]
 packages = [
-    {include = "inputs"},
+    {include = "emu_renewal"}
 ]
 
 [tool.poetry.dependencies]
 python = ">=3.8.0, <4.0.0"
-estival = "==0.4.9"
-kaleido = "==0.2.1"
+estival = "==0.5.1"
+kaleido = {version = "==0.2.1", optional = true}
 summerepi2 = ">=1.3.0"
+numpyro = ">=0.13.0"
+
+[tool.poetry.extras]
+full = ["kaleido"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
